# internal/api/storage/postgres/users.go
@@ -11,21 +11,15 @@ import (
 
 type (
 	User struct {
-		ID          int64     `pg:"usr_id" json:"id"`
-		MplxBalance int64     `pg:"usr_mplx_balance" json:"mplx_balance"`
-		DynamicID   string    `pg:"usr_dynamic_id" json:"dynamic_id"`
-		CreatedAt   time.Time `pg:"usr_created_at" json:"created_at"`
+		ID                int64     `pg:"usr_id" json:"id"`
+		MplxBalance       int64     `pg:"usr_mplx_balance" json:"mplx_balance"`
+		DynamicID         string    `pg:"usr_dynamic_id" json:"dynamic_id"`
+		CreatedAt         time.Time `pg:"usr_created_at" json:"created_at"`
+		LastUpdatedPlanAt time.Time `pg:"usr_last_updated_plan_at" json:"last_updated_plan_at"`
 	}
-	Subscription struct {
-		Name              string    `pg:"sbs_name" json:"name"`
-		RequestsPerSecond int64     `pg:"sbs_request_per_second" json:"requests_per_second"`
-		MinimumBalance    int64     `pg:"sbs_minimum_balance" json:"minimum_balance"`
-		TokenLimit        int64     `pg:"sbs_tokens_limit" json:"token_limit"`
-		CreatedAt         time.Time `pg:"sbs_created_at" json:"-"`
-	}
-	UserWithSubscription struct {
+	UserWithCurrentPlan struct {
 		User
-		Subscription
+		Plan
 	}
 )
 
@@ -33,7 +27,7 @@ const (
 	usersTable = "users"
 )
 
-func (s *Storage) GetOrCreateUser(ctx context.Context, dynamicID string) (u UserWithSubscription, err error) {
+func (s *Storage) GetOrCreateUser(ctx context.Context, dynamicID string) (u UserWithCurrentPlan, err error) {
 	if dynamicID == "" {
 		return u, ErrEmptyDynamicID
 	}
@@ -79,12 +73,12 @@ func (s *Storage) CreateUser(ctx context.Context, dynamicID string) error {
 	return nil
 }
 
-func (s *Storage) GetUser(ctx context.Context, dynamicID string) (u UserWithSubscription, err error) {
+func (s *Storage) GetUser(ctx context.Context, dynamicID string) (u UserWithCurrentPlan, err error) {
 	if dynamicID == "" {
 		return u, ErrEmptyDynamicID
 	}
 
-	query := `SELECT usr_id, usr_dynamic_id, usr_created_at, usr_mplx_balance, sbs_name, sbs_request_per_second, sbs_minimum_balance, sbs_tokens_limit, sbs_created_at
+	query := `SELECT usr_id, usr_dynamic_id, usr_created_at, usr_mplx_balance, usr_last_updated_plan, sbs_priority, sbs_name, sbs_request_per_second, sbs_tokens_limit, sbs_created_at
 				FROM users 
     			LEFT JOIN subscriptions USING(sbs_id)
 				WHERE usr_dynamic_id = ?`
